--- a/app/fristproj2/templates/index.html
+++ b/app/fristproj2/templates/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first prject of </title>
-    <link rel="stylesheet" href="/style.css"
+    <link rel="stylesheet" href="../static/css/style.css"></link>
 </head>
 <body>
     <div class="background--custom">
@@ -14,10 +14,14 @@
         var gradient = new Gradient();
         gradient.initGradient("#canvas");
     </script>
+    <h1>project wooooo</h1>
     <div class="body">
         <p>i dont do anything productive in my free time womp womp *wmop wpom*. 
            i play games, watch youtube, and yea thats it. 
-           i have like 8 redeeming qualities. WORDINGTON!!</p>
-    </div>
+           mr luu is ascendant 3 and im over here in iron 1.
+           <a href="http://127.0.0.1:5500/app/fristproj2/templates/story.html">ms mugge > mr luu (theres a story)</a>
+           WORDINGTON!!
+           anyway good night chat</p>
+    </div> 
 </body>
 </html>
