adding coloring and right aligned everything

--- a/app/fristproj2/static/css/style.css
+++ b/app/fristproj2/static/css/style.css
@@ -31,6 +31,14 @@ canvas#canvas {
 
 .h1{
 
-    font-family: "Source Code Pro";
+    color: white;
+
+}
+
+.body{
+
+    align-self: right;
+    margin-left: 50%;
+    color: white;
 
 }
