--- a/app/fristproj2/templates/index.html
+++ b/app/fristproj2/templates/index.html
@@ -14,14 +14,34 @@
         var gradient = new Gradient();
         gradient.initGradient("#canvas");
     </script>
-    <h1>project wooooo</h1>
     <div class="body">
+        <h1>project wooooo</h1>
         <p>i dont do anything productive in my free time womp womp *wmop wpom*. 
            i play games, watch youtube, and yea thats it. 
            mr luu is ascendant 3 and im over here in iron 1.
            <a href="http://127.0.0.1:5500/app/fristproj2/templates/story.html">ms mugge > mr luu (theres a story)</a>
            WORDINGTON!!
-           anyway good night chat</p>
+           anyway good night chat
+           
+           
+           <h5>most liked colors</h5>
+           <ol>
+            <li>purple</li>
+            <li>light teal</li>
+            <li>burnt orange/red</li>
+            <li>seafoam green</li>
+            <li>chartreuse</li>
+           </ol>
+           <h5>smash ultimate mains</h5>
+           <ul>
+            <li>zero suit samus</li>
+            <li>lucas</li>
+            <li>roy</li>
+            <li>marth</li>
+           </ul>
+        </p>
+    
+    
     </div> 
 </body>
 </html>
